@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-07-21:
+
+- Fixed a bug where a reproducible $RANDOM sequence (after assigning a
+  specific value to $RANDOM) was influenced by running any external command.
+
 2022-07-14:
 
 - Fixed a bug that caused a spurious "Done" message on the interactive shell
